syntax = "proto3";

package blocks;

message PostBlockRequest {
    bytes block = 1;
    shared.Headers headers = 2;
}

message PostBlockResponse {
    bool status = 1;
    uint32 height = 2;
}

message GetBlocksRequest {
    uint32 lastBlockHeight = 1;
    uint32 blockLimit = 2;
    bool headersOnly = 3;
    bool serialized = 4;
    shared.Headers headers = 5;
}

message GetBlocksResponse {
    message BlockHeader {
        string id = 1;
        uint32 version = 2;
        uint32 timestamp = 3;
        string previousBlock = 4;
        uint32 height = 5;
        uint32 numberOfTransactions = 6;
        string totalAmount = 7; // bignumber in core
        string totalFee = 8; // bignumber in core
        string reward = 9; // bignumber in core
        uint32 payloadLength = 10;
        string payloadHash = 11;
        string generatorPublicKey = 12;
        string blockSignature = 13;
        bytes transactions = 14; // custom ser/deser instead of repeated string
    }

    bytes blocks = 1; // custom ser/deser instead of repeated BlockHeader
}
