syntax = "proto3";

package getPeers;

message GetPeersRequest {
    shared.Headers headers = 1;
}

message GetPeersResponse {
	shared.Headers headers = 1;
    repeated shared.PeerLike peers = 2;
}
