syntax = "proto3";

package getStatus;

message GetStatusRequest {
    shared.Headers headers = 1;
}

message GetStatusResponse {
    message State {
        message BlockHeader {
            string id = 1;
            uint32 version = 2;
            uint32 timestamp = 3;
            string previousBlock = 4;
            uint32 height = 5;
            uint32 numberOfTransactions = 6;
            string totalAmount = 7; // bignumber in core
            string totalFee = 8; // bignumber in core
            string reward = 9; // bignumber in core
            uint32 payloadLength = 10;
            string payloadHash = 11;
            string generatorPublicKey = 12;
            string blockSignature = 13;
        }
        uint32 height = 1;
        bool forgingAllowed = 2;
        uint32 currentSlot = 3;
        BlockHeader header = 4;
    }

    message Config {
        message Network {
            message Token {
                string name = 1;
                string symbol = 2;
            }

            string name = 1;
            string nethash = 2;
            string explorer = 3;
            Token token = 4;
            uint32 version = 5;
        }

        message Plugin {
            uint32 port = 1;
            bool enabled = 2;
            bool estimateTotalCount = 3;
        }

        string version = 1;
        Network network = 2;
        map<string, Plugin> plugins = 3;
    }

	shared.Headers headers = 1;
    State state = 2;
    Config config = 3;
}
