syntax = "proto3";

package postTransactions;

message PostTransactionsRequest {
    bytes transactions = 1;
    shared.Headers headers = 2;
}

message PostTransactionsResponse {
	shared.Headers headers = 1;
    repeated int32 accept = 2;
}
